test/error/ClassBaseCircular.ci
public class Foo : Test //ERROR: Circular inheritance for class Foo
{
}

public class Test : Foo
{
	public static bool Run() => true;
}
